Bug #45733        Cluster with more than 4 storage node    . fixed basestring_vsprintf so it will always return      the posix defined retval for vsnprintf.

if the buffer can't hold the output string, the
     function will return the space needed.  you need
     to provide a buffer one larger than the retval
     so the terminating null will be written.